# TitleModifier

./: .gitignore  CMakeLists.txt  README.md  makefile
config/: sanitizers.mk
header/: base.h  prop_modif.h
src/: main.c  prop_modif.c
